02-keda-prometheus-address/.test/configmap-fake.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: keda-prometheus-serveraddress-fake
  namespace: observability
data:
  main: http://prometheus-fake.example.com:9090
