02-keda-prometheus-address/.test/configmap-updated-2.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: keda-prometheus-serveraddress
  namespace: observability
  labels:
    prometheus.keda.sh/central-serveraddress: "true"
data:
  main: http://prometheus-updated-2.example.com:9090
