02-keda-prometheus-address/.test/scaledobject-no-opt-in.yaml
---
apiVersion: keda.sh/v1alpha1
kind: ScaledObject
metadata:
  name: prometheus-scaledobject-no-opt-in
  namespace: observability
spec:
  scaleTargetRef:
    name: my-deployment
  triggers:
    - type: prometheus
      metadata:
        serverAddress: "http://my-prometheus.example.com:9090"
        query: sum(rate(http_requests_total{job="app"}[2m]))
