02-keda-prometheus-address/.test/scaledobject.yaml
---
apiVersion: keda.sh/v1alpha1
kind: ScaledObject
metadata:
  name: prometheus-scaledobject
  namespace: observability
  annotations:
    prometheus.keda.sh/use-central-serveraddress: "true"
spec:
  scaleTargetRef:
    name: my-deployment
  triggers:
    - type: prometheus
      metadata:
        serverAddress: "http://my-prometheus.example.com:9090"
        query: sum(rate(http_requests_total{job="app"}[2m]))
