02-keda-prometheus-address/.test/scaledobject-assert-updated.yaml
apiVersion: keda.sh/v1alpha1
kind: ScaledObject
metadata:
  name: prometheus-scaledobject
  namespace: observability
spec:
  scaleTargetRef:
    name: my-deployment
  triggers:
    - type: prometheus
      metadata:
        serverAddress: http://prometheus-updated.example.com:9090
        query: sum(rate(http_requests_total{job="app"}[2m]))
